manifest/objects/DNBConnect__DNB_Connect_Setting__mdt.object
<CustomObject>
    <description>This is used to store various global and profile level settings related to DNB Connect App</description>
    <fields>
        <fullName>DNBConnect__Settings__c</fullName>
        <label>Settings</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNBConnect__Translations__c</fullName>
        <label>Translations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DNBConnect__testField__c</fullName>
        <label>testField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DNB Connect Setting</label>
    <pluralLabel>DNB Connect Settings</pluralLabel>
</CustomObject>